--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jshint": "^2.13.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-multiple-select-dropdown-lite": "^2.0.5",
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
     "web-vitals": "^2.1.4"
