--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "charts-css-react": "^0.0.9",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.8.1",
     "jshint": "^2.13.4",
